@@ -3,6 +3,7 @@
 - Fixed lower case "then" in an if
 - Fixed "reset" not being a reserved keyword
 - Fixed parsing of Declare PtrSafe
+- Improved language detection to warn if invalid file is being converted
 
 **0.4.1.1**
 
@@ -17,7 +18,7 @@
 **0.4.1**
 
 - Made available through **pip**
-- Reworked the **line continuation** logic so should be much less succeptible to failing
+- Reworked the **line continuation** logic so should be much less susceptible to failing
 - Fixed issue with **highlighting the incorrect error** line when the error was on a continuation line
 - Fixed issue with **<> not being converted to !=** in comparison
 
